<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></FrameLayout>

    <com.gauravk.bubblenavigation.BubbleNavigationConstraintView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorBottomNav"
        android:elevation="4dp"
        android:padding="8dp"
        app:bnc_mode="inside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_container"
        app:layout_constraintVertical_bias="1.0">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/colorSignInAccent"
            app:bt_colorInactive="@color/colorBlack"
            app:bt_icon="@drawable/ic_list"
            app:bt_padding="12dp"
            app:bt_title="@string/categories"
            app:bt_titlePadding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nav_chart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/colorSignInAccent"
            app:bt_colorInactive="@color/colorBlack"
            app:bt_icon="@drawable/ic_chart"
            app:bt_padding="12dp"
            app:bt_title="@string/chart"
            app:bt_titlePadding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nav_home"
            app:layout_constraintStart_toEndOf="@id/nav_categories"
            app:layout_constraintTop_toTopOf="parent" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_active="true"
            app:bt_colorActive="@color/colorSignInAccent"
            app:bt_colorInactive="@color/colorBlack"
            app:bt_icon="@drawable/ic_home"
            app:bt_padding="12dp"
            app:bt_title="@string/home"
            app:bt_titlePadding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nav_profile"
            app:layout_constraintStart_toEndOf="@id/nav_chart"
            app:layout_constraintTop_toTopOf="parent" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/colorSignInAccent"
            app:bt_colorInactive="@color/colorBlack"
            app:bt_icon="@drawable/ic_user_profile"
            app:bt_padding="12dp"
            app:bt_title="@string/profile"
            app:bt_titlePadding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nav_more"
            app:layout_constraintStart_toEndOf="@id/nav_home"
            app:layout_constraintTop_toTopOf="parent" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/colorSignInAccent"
            app:bt_colorInactive="@color/colorBlack"
            app:bt_icon="@drawable/ic_more"
            app:bt_padding="12dp"
            app:bt_title="@string/more"
            app:bt_titlePadding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/nav_profile"
            app:layout_constraintTop_toTopOf="parent" />

    </com.gauravk.bubblenavigation.BubbleNavigationConstraintView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_new_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorSignInAccent"
        android:clickable="true"
        android:focusable="true"
        android:onClick="newTransaction"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_add" />

</androidx.constraintlayout.widget.ConstraintLayout>